--- a/.github/workflows/pypi-test.yaml
+++ b/.github/workflows/pypi-test.yaml
@@ -1,10 +1,6 @@
 name: PyPI package tests
 
 on:
-  #####################################
-  push:
-    branches: [ master, main, develop ]
-  #####################################
   # Run daily, at 00:00.
   schedule:
     - cron: '0 0 * * *'
@@ -14,8 +10,7 @@ on:
 # Allow only one concurrent workflow, skipping runs queued between the run
 # in-progress and latest queued. And cancel in-progress runs.
 concurrency:
-  group:
-    ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 # Set the environment variables to be used in all jobs defined in this workflow
@@ -83,7 +78,9 @@ jobs:
 
       - name: Test tutorials as notebooks
         working-directory: easydiffraction
-        run: pixi run python -m pytest --nbmake tutorials/ --nbmake-timeout=600 --color=yes -n auto -v
+        run: >
+          pixi run python -m pytest --nbmake tutorials/ --nbmake-timeout=600 --color=yes
+          -n auto -v
 
   # Job 2: Build and publish dashboard (reusable workflow)
   run-reusable-workflows:
