--- a/pyproject.toml
+++ b/pyproject.toml
@@ -147,9 +147,9 @@ close-quotes-on-newline = true
 # https://interrogate.readthedocs.io/en/latest/
 
 [tool.interrogate]
-fail-under = 70 # Minimum docstring coverage percentage to pass
+fail-under = 0                   # Minimum docstring coverage percentage to pass
 verbose = 1
-exclude = ["src/**/__init__.py"]
+#exclude = ['src/**/__init__.py']
 
 #######################################
 # Configuration for coverage/pytest-cov
@@ -160,9 +160,9 @@ branch = true                    # Measure branch coverage as well
 source = ['src/easydiffraction'] # Limit coverage to the source code directory
 
 [tool.coverage.report]
-show_missing = true # Show missing lines
-skip_covered = true # Skip files with 100% coverage in the report
-fail_under = 70     # Minimum coverage percentage to pass
+show_missing = true  # Show missing lines
+skip_covered = false # Skip files with 100% coverage in the report
+fail_under = 0       # Minimum coverage percentage to pass
 
 ########################
 # Configuration for ruff
@@ -175,7 +175,7 @@ fail_under = 70     # Minimum coverage percentage to pass
 exclude = ['tmp']
 indent-width = 4
 line-length = 99
-preview = true # Enable new rules that are not yet stable, like DOC
+preview = true    # Enable new rules that are not yet stable, like DOC
 
 [tool.ruff.format]
 docstring-code-format = true    # Whether to format code snippets in docstrings
@@ -197,6 +197,9 @@ select = [
   'S',   # Security-related issues (e.g., use of insecure functions or libraries)
   'W',   # General PEP 8 warnings (e.g., lines too long, trailing whitespace)
 ]
+
+[tool.ruff.lint.per-file-ignores]
+'tests/**/*.py' = ['S101'] # Allow assert statements in tests
 
 [tool.ruff.lint.flake8-tidy-imports]
 ban-relative-imports = 'all'
