--- a/pixi.toml
+++ b/pixi.toml
@@ -41,14 +41,14 @@ channels = ['conda-forge']
 
 [dependencies]
 nodejs = '*' # Required for Prettier (non-Python formatting)
-gsl = '*' # GNU Scientific Library; required for pdffit2.
+gsl = '*'    # GNU Scientific Library; required for pdffit2.
 
 [pypi-dependencies] # == [feature.default.pypi-dependencies]
-pip = '*'         # Native package installer
-uv = '*'          # Package manager
-jupyterlab = '*'  # Jupyter notebooks
+pip = '*'        # Native package installer
+uv = '*'         # Package manager
+jupyterlab = '*' # Jupyter notebooks
 pixi-kernel = '*' # Pixi Jupyter kernel
-easydiffraction = { path = ".", editable = true, extras = ['all'] } # Main package
+easydiffraction = { path = ".", editable = true, extras = ['all'] }
 
 # Specific features: Set specific Python versions
 
@@ -104,8 +104,8 @@ py-format-check = "pixi run py-format-check-pre ."
 nonpy-format-check-pre = "npx prettier --list-different --config=prettierrc.toml"
 nonpy-format-check-modified = "pixi run nonpy-format-check-pre $(git diff --diff-filter=d --name-only HEAD | grep -E '\\.(json|ya?ml|toml|md|css|html)$' || echo .)"
 nonpy-format-check = "pixi run nonpy-format-check-pre ."
-notebook-format-check = 'nbqa ruff tutorials/'
-docs-format-check = 'docformatter src/ tutorials/ --check'
+notebook-format-check = 'nbqa ruff docs/docs/tutorials/'
+docs-format-check = 'docformatter src/ docs/docs/tutorials/ --check'
 # Run like a real commit: staged files only (almost)
 pre-commit-check = 'pre-commit run --hook-stage pre-commit'
 # CI check: lint/format everything
@@ -127,7 +127,7 @@ py-format-fix = "python -m ruff format"
 nonpy-format-fix = 'pixi run nonpy-format-check --write'
 nonpy-format-fix-modified = "pixi run nonpy-format-check-modified --write"
 notebook-format-fix = 'pixi run notebook-format-check --fix'
-docs-format-fix = 'docformatter src/ tutorials/ --in-place'
+docs-format-fix = 'docformatter src/ docs/docs/tutorials/ --in-place'
 
 fix = { depends-on = [
   'py-format-fix',
@@ -147,7 +147,7 @@ raw-metrics-json = 'radon raw -s -j src/'
 ## 📊 Coverage
 unit-tests-coverage = 'pixi run unit-tests --cov=src/easydiffraction --cov-report=term-missing'
 integration-tests-coverage = 'pixi run integration-tests --cov=src/easydiffraction --cov-report=term-missing'
-docstring-coverage = 'interrogate -c pyproject.toml src/'
+docstring-coverage = 'interrogate -c pyproject.toml src/easydiffraction'
 
 cov = { depends-on = ['docstring-coverage', 'integration-tests-coverage'] }
 
