Update backmerge script for autosync

--- a/.github/workflows/backmerge.yaml
+++ b/.github/workflows/backmerge.yaml
@@ -41,16 +41,11 @@ jobs:
         with:
           app-id: ${{ vars.EASYSCIENCE_APP_ID }}
           private-key: ${{ secrets.EASYSCIENCE_APP_KEY }}
+          repositories: ${{ github.event.repository.name }}
 
       - name: Merge master into develop
         run: |
-          # Exit on error (-e), undefined vars (-u), and pipeline failures (pipefail)
           set -euo pipefail
-
-          # Configure git with bot's identity 
-          git config user.name "easyscience[bot]"
-          git config user.email "${{ vars.EASYSCIENCE_APP_ID }}+easyscience[bot]@users.noreply.github.com"
-          git remote set-url origin "https://x-access-token:${{ steps.bot.outputs.token }}@github.com/${{ github.repository }}.git"
 
           # Get the tag name variable to be used in the commit message
           TAG="${{ github.ref_name }}"
@@ -66,6 +61,7 @@ jobs:
           git merge master --no-ff -m "Backmerge: ${TAG} from master into develop [skip ci]"
 
           # Push the merge commit to develop
+          # The easyscience app in bypass list allows this push
           git push origin develop
 
           echo "✅ Successfully merged master (${TAG}) into develop"
