Fix docs site navigation and header

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -28,6 +28,7 @@ theme:
     - search.share
     - search.suggest
     - toc.follow
+    - navigation.instant # Instant loading (SPA-like)
   palette:
     # Palette toggle for light mode
     - media: '(prefers-color-scheme: light)'
