--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,5 +1,5 @@
 # Project information
-site_name: EasyPeasy Library
+site_name: ''
 site_url: https://easyscience.github.io/peasy-lib
 
 # Repository
@@ -28,7 +28,6 @@ theme:
     - search.share
     - search.suggest
     - toc.follow
-    - navigation.instant # Instant loading (SPA-like)
   palette:
     # Palette toggle for light mode
     - media: '(prefers-color-scheme: light)'
