Fix docs header and update site name

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,5 +1,5 @@
 # Project information
-site_name: ''
+site_name: EasyPeasy Library
 site_url: https://easyscience.github.io/peasy-lib
 
 # Repository
