Update all references to 'easypeasy'

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -21,6 +21,7 @@ theme:
     - content.tooltips
     - navigation.footer
     - navigation.indexes
+    - navigation.instant # Instant loading (SPA-like)
     #- navigation.sections
     - navigation.top # Back-to-top button
     - navigation.tracking # Anchor tracking
