--- a/.github/workflows/pypi-test.yaml
+++ b/.github/workflows/pypi-test.yaml
@@ -40,30 +40,30 @@ jobs:
           frozen: false
 
       - name: Init pixi project
-        run: pixi init easydiffraction
+        run: pixi init easypeasy
 
       - name: Add Python 3.13 from Conda
-        working-directory: easydiffraction
+        working-directory: easypeasy
         run: pixi add "python=3.13"
 
       - name: Add other Conda dependencies
-        working-directory: easydiffraction
+        working-directory: easypeasy
         run: pixi add gsl
 
-      - name: Add easydiffraction from PyPI
-        working-directory: easydiffraction
-        run: pixi add --pypi "easydiffraction[all]"
+      - name: Add easypeasy from PyPI
+        working-directory: easypeasy
+        run: pixi add --pypi "easypeasy[all]"
 
       - name: Add Pixi task as a shortcut
-        working-directory: easydiffraction
-        run: pixi task add easydiffraction "python -m easydiffraction"
+        working-directory: easypeasy
+        run: pixi task add easypeasy "python -m easypeasy"
 
       - name: Run unit tests to verify the installation
-        working-directory: easydiffraction
+        working-directory: easypeasy
         run: pixi run python -m pytest ../tests/unit/ --color=yes -v
 
       - name: Run integration tests to verify the installation
-        working-directory: easydiffraction
+        working-directory: easypeasy
         run: pixi run python -m pytest ../tests/integration/ --color=yes -n auto
 
   # Job 2: Build and publish dashboard (reusable workflow)
