Refactor PyPI dependencies in pypi-test.yaml
Updated the command to add easypeasy from PyPI and added a step to include development dependencies.

--- a/.github/workflows/pypi-test.yaml
+++ b/.github/workflows/pypi-test.yaml
@@ -52,7 +52,15 @@ jobs:
 
       - name: Add easypeasy from PyPI
         working-directory: easypeasy
-        run: pixi add --pypi "easypeasy[all]"
+        run: pixi add --pypi "easypeasy"
+
+      - name: Add dev deps from PyPI
+        working-directory: easypeasy
+        run: pixi add --pypi pytest pytest-xdist
+
+      - name: Add dev dependencies from PyPI
+        working-directory: easypeasy
+        run: pixi add pytest pytest-xdist
 
       - name: Add Pixi task as a shortcut
         working-directory: easypeasy
