--- a/.github/workflows/pypi-test.yml
+++ b/.github/workflows/pypi-test.yml
@@ -73,5 +73,5 @@ jobs:
   # Job 2: Build and publish dashboard (reusable workflow)
   run-reusable-workflows:
     needs: pypi-package-tests # depend on previous job
-    uses: ./.github/workflows/dashboard.yaml
+    uses: ./.github/workflows/dashboard.yml
     secrets: inherit
