--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -79,7 +79,6 @@ jobs:
         continue-on-error: true
         shell: bash
         run: pixi run nonpy-format-check
-
       # Check formatting of Jupyter Notebooks in the tutorials folder
       - name: Convert tutorial scripts to notebooks and check formatting
         id: check_notebooks_formatting
@@ -110,11 +109,11 @@ jobs:
       # Fail job if any check failed
       - name: Fail job if any check failed
         if: |
-          steps.check_pyproject.outcome == 'failure' ||
-          steps.check_code_linting.outcome == 'failure' ||
-          steps.check_code_formatting.outcome == 'failure' ||
-          steps.check_docs_formatting.outcome == 'failure' ||
-          steps.check_others_formatting.outcome == 'failure' ||
-          steps.check_notebooks_formatting.outcome == 'failure'
+          steps.check_pyproject.outcome == 'failure'
+          || steps.check_code_linting.outcome == 'failure'
+          || steps.check_code_formatting.outcome == 'failure'
+          || steps.check_docs_formatting.outcome == 'failure'
+          || steps.check_others_formatting.outcome == 'failure'
+          || steps.check_notebooks_formatting.outcome == 'failure'
         shell: bash
         run: exit 1
