--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -66,7 +66,7 @@ extra:
       name: EasyPeasy Main Webpage
     - icon: app # File: overrides/.icons/app.svg
       link: https://easyscience.github.io/peasy-app
-      name: EasyDiffraction Application Docs
+      name: EasyPeasy Application Docs
     - icon: fontawesome/brands/github # Name as in Font Awesome
       link: https://github.com/easyscience/peasy-lib
       name: EasyPeasy Library Source Code on GitHub
